Add CSV and OFX parsing methods for transaction import; implement tests for parsing logic